--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "burger-menu": "^2.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
