--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "burger-menu": "^2.0.0",
     "hamburger-react": "^2.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "use-local-storage": "^2.3.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.9"
+    "@babel/core": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "babel-jest": "^29.6.0",
+    "jest": "^29.6.0",
+    "vite": "^4.3.9"
   }
 }
