--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "kana-tool",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
     "burger-menu": "^2.0.0",
@@ -23,6 +24,13 @@
     "@vitejs/plugin-react": "^4.0.1",
     "babel-jest": "^29.6.0",
     "jest": "^29.6.0",
+    "prettier": "2.8.8",
     "vite": "^4.3.9"
+  },
+  "prettier": {
+    "files": [
+      "src/**/*.js, src/**/*.jsx, src/**/*.css"
+    ],
+    "endOfLine": "auto"
   }
 }
