--- a/package.json
+++ b/package.json
@@ -3,29 +3,26 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest",
     "pretty": "prettier --write ."
   },
   "dependencies": {
-    "burger-menu": "^2.0.0",
-    "hamburger-react": "^2.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "less": "^4.2.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.6",
-    "@babel/preset-env": "^7.22.6",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
-    "babel-jest": "^29.6.0",
-    "jest": "^29.6.0",
-    "prettier": "2.8.8",
-    "vite": "^4.3.9"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "prettier": "3.5.3",
+    "vite": "^6.2.0"
   },
   "prettier": {
     "files": [
